--- a/templates/profile/index.html
+++ b/templates/profile/index.html
@@ -68,6 +68,8 @@
                 };
             </script>
         {% endif %}
+        
+        {% csrf_token %}
 
         <script src="/static/js/profile/profile-detail.js"></script>
         <script src="/static/js/programs/mobile_view.js"></script>
